Rerouting log out from all paths; realigning 'see more' link on profile page; linking profile images and cover photo on certain pages; fixing sql queries for friendships table.

--- a/myspice_app/static/css/friends.css
+++ b/myspice_app/static/css/friends.css
@@ -259,6 +259,12 @@
     flex-wrap: wrap;
 }
 
+.pending_request_picture {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+}
+
 /* footer */
 
 #footer_div {
