--- a/myspice_app/static/css/new_post.css
+++ b/myspice_app/static/css/new_post.css
@@ -168,7 +168,7 @@
 }
 
 #sns_links_div {
-    margin-top: 40px;
+    margin: 40px 0px;
     gap: 40px;
 }
 
